--- a/apage.html
+++ b/apage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>CSS3_water</title>
+		<title>Brian A. Alfan0</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600|Source+Code+Pro" rel="stylesheet" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js" type="text/javascript"></script><![endif]-->
@@ -70,7 +70,7 @@
 				<div id="header" class="row">
 					<div class="4u">
 						<div class="wrapper">
-							<h1><a href="index.html">CSS3<span class="header_colour">_water</span></a></h1>
+							<h1><a href="index.html">Brian<span class="header_colour">Alfano</span></a></h1>
 							<h2>Simple. Contemporary. Website Template.</h2>
 					    </div>
 					</div>
