--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>CSS3_water</title>
+		<title>Brian A. Alfano</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600|Source+Code+Pro" rel="stylesheet" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js" type="text/javascript"></script><![endif]-->
@@ -70,35 +70,19 @@
 				<div id="header" class="row">
 					<div class="4u">
 						<div class="wrapper">
-							<h1><a href="index.html">CSS3<span class="header_colour">_water</span></a></h1>
-							<h2>Simple. Contemporary. Website Template.</h2>
+							<h1><a href="index.html">brian<span class="header_colour">alfano </span></a></h1>
+							<h2>Software Engineer Personal Website</h2>
 					    </div>
 					</div>
 					
 					<nav id="main-nav" class="8u">
 						<ul>
 							<li><a class="active" href="index.html">Home</a></li>
-							<li><a href="examples.html">Examples</a></li>
+							<li><a href="examples.html">Projects</a></li>
 							<li><a href="apage.html">A Page</a></li>
-							<li><a href="anotherpage.html">Another Page</a></li>							
-							<li>
-								<a href="#">Example Drop Down</a>			
-									<ul>
-										<li><a href="">Drop Down 1</a></li>
-										<li><a href="#">Drop Down 2</a></li>
-										<li>
-											<a href="#">Drop Down 3</a>
-												<ul>
-													<li><a href="#">Sub Drop Down One</a></li>
-													<li><a href="#">Sub Drop Down Two</a></li>
-													<li><a href="#">Sub Drop Down Three</a></li>
-													<li><a href="#">Sub Drop Down Four</a></li>
-													<li><a href="#">Sub Drop Down Five</a></li>
-												</ul>
-										</li>
-									</ul>
-							</li>
+							<li><a href="anotherpage.html">Another Page</a></li>				
 							<li><a href="contact.php">Contact</a></li>
+
 						</ul>
 					</nav>
 				</div>
@@ -109,7 +93,7 @@
 					<div id="wrapper-banner">						
 						<!-- Banner -->								
 						<div id="banner">
-							<a href="#"><img src="images/banner.jpg" alt="banner image" /></a>
+							<a href="index.html"><img src="images/pro.jpg" alt="banner image"/></a>
 						</div>	
 					</div>
 				</div>						
@@ -127,26 +111,15 @@
 						<div id="sidebar">
 							<section class="12u">
 								<h3>Latest News</h3>
-								<h4>New Website Launched</h4>
-								<h5>March 1st, 2014</h5>
-								<p>2014 sees the redesign of our website. <a href="#">Read more</a></p>
+								<h4>June 12th, 2015</h4>
+								<p>Creating a website for myself </p>
 							</section>
 							<section class="12u">
 								<h3>Useful Links</h3>
 								<ul>
-									<li><a href="#">First Link</a></li>
-									<li><a href="#">Another Link</a></li>
-									<li><a href="#">And Another</a></li>
-									<li><a href="#">Last One</a></li>
-								</ul>
-							</section>
-							<section class="12u">
-								<h3>More Useful Links</h3>
-								<ul>
-									<li><a href="#">First Link</a></li>
-									<li><a href="#">Another Link</a></li>
-									<li><a href="#">And Another</a></li>
-									<li><a href="#">Last One</a></li>
+									<li> <a href="http://www.github.com/No-Doy" target="_blank">Personal Git-Hub</a></li>
+									<li><a href="http://www.linkedin.com" target="_blank">Linked In</a></li>
+									<li><a href="http://stache.link" target = "_blank">Stache Project</a></li>
 								</ul>
 							</section>
 						</div>
@@ -154,17 +127,15 @@
 
 					<section class="8u">				
 						
-						<h1>Welcome to the CSS3_water template</h1>
-						<p>This simple, fixed width website template is released under a <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0 Licence</a>. This means you are free to download and use it for personal and commercial projects. However, you <strong>must leave the 'design from css3templates.co.uk' link in the footer of the template</strong>.</p>
-						<p>This template is written entirely in <strong>HTML5</strong> and <strong>CSS3</strong>.</p>
-						<p>You can view more free CSS3 web templates <a href="http://www.css3templates.co.uk">here</a>.</p>
+						<h1>Welcome to Brian Alfano's Website</h1>
+						<p>Hopefully you came here to understand my background, passions, school, projects, and involvments I am apart of.</p>
 						<p>This template is a fully documented 5 page website, with an <a href="examples.html">examples</a> page that gives examples of all the styles available with this design. There is also a working PHP contact form on the contact page.</p>
-						<h2>Browser Compatibility</h2>
-						<p>This template has been tested in the following browsers:</p>
+						<h2>Take a Tour</h2>
 						<ul>
-							<li>Internet Explorer 9</li>
-							<li>FireFox 24</li>
-							<li>Google Chrome 31</li>
+							<li><a class="active" href="index.html">Home</a></li>
+							<li><a href="examples.html">Examples</a></li>
+							<li><a href="apage.html">A Page</a></li>
+							<li><a href="anotherpage.html">Another Page</a></li>
 						</ul>						
 					</section>					
 
@@ -175,8 +146,7 @@
 		<div class="container">					
 			<!-- Footer -->
 				<footer>
-					<p><img src="images/twitter.png" alt="twitter" />&nbsp;<img src="images/facebook.png" alt="facebook" />&nbsp;<img src="images/rss.png" alt="rss" /></p>
-					<p><a href="index.html">Home</a> | <a href="examples.html">Examples</a> | <a href="apage.html">A Page</a> | <a href="anotherpage.html">Another Page</a> | <a href="contact.php">Contact Us</a></p>
+					<p><a href="index.html">Home</a> | <a href="examples.html">Projects</a> | <a href="apage.html">A Page</a> | <a href="anotherpage.html">Another Page</a> | <a href="contact.php">Contact Us</a></p>
 					<p>Copyright &copy; CSS3_water | <a href="http://skeljs.org/">skel.js</a> | <a href="http://fotogrph.com/">Images</a> | <a href="http://www.css3templates.co.uk">design from css3templates.co.uk</a></p>
 				</footer>		
 		</div>		
