--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 				<div id="header" class="row">
 					<div class="4u">
 						<div class="wrapper">
-							<h1><a href="index.html">brian<span class="header_colour">alfano </span></a></h1>
-							<h2>Software Engineer Personal Website</h2>
+							<h1><a href="index.html">Brian A. <span class="header_colour">Alfano </span></a></h1>
+							<h2>Software Engineer - CU Boulder class of 2017</h2>
 					    </div>
 					</div>
 					
@@ -93,7 +93,7 @@
 					<div id="wrapper-banner">						
 						<!-- Banner -->								
 						<div id="banner">
-							<a href="index.html"><img src="images/pro.jpg" alt="banner image"/></a>
+							<a><img src="images/pro.jpg" alt="banner image"/></a>
 						</div>	
 					</div>
 				</div>						
@@ -110,7 +110,7 @@
 					<section class="4u">
 						<div id="sidebar">
 							<section class="12u">
-								<h3>Latest News</h3>
+								<h3>Contact</h3>
 								<h4>June 12th, 2015</h4>
 								<p>Creating a website for myself </p>
 							</section>
@@ -120,6 +120,7 @@
 									<li> <a href="http://www.github.com/No-Doy" target="_blank">Personal Git-Hub</a></li>
 									<li><a href="http://www.linkedin.com" target="_blank">Linked In</a></li>
 									<li><a href="http://stache.link" target = "_blank">Stache Project</a></li>
+									<li> <a href ="resume.pdf"> Resume </a></li>
 								</ul>
 							</section>
 						</div>
@@ -127,13 +128,18 @@
 
 					<section class="8u">				
 						
-						<h1>Welcome to Brian Alfano's Website</h1>
-						<p>Hopefully you came here to understand my background, passions, school, projects, and involvments I am apart of.</p>
-						<p>This template is a fully documented 5 page website, with an <a href="examples.html">examples</a> page that gives examples of all the styles available with this design. There is also a working PHP contact form on the contact page.</p>
+						<h1>Welcome to Brian Alfano's Website!</h1>
+						<p> Hopefully you came here to understand my background, passions, projects, schooling, work experience, and involvments I am apart of. </p>
+						<p> I grew up in Santa Monica, California and moved to Colorado after my acceptance at The University of Colorado. Since my sophomore year my focus in school consists of studying Computer Science and Business. </p>
+						<p> My passion lies in Software Engineering. I strive to practice debugging, software development, security, and testing. Strong software stems from these understandings and a goal of mine is to excel in all four fields. </p>
+						<p> A three month long Software Methods and Tools project was completed in Fall of 2014 by me and four other students. More information about <dfn>all</dfn> projects can be found <a href="examples.html">here</a>.</p>
+						<p> My focus at school is studing Software Engineering with a minor in Buisness at the Leeds School of Business. My business minor gave me knowledge about marketing, cooperative work environment, entreprenuership/business models, accounting, and finnances of a business.</p>
+						<p> In spring 2014 I took a job on the CU campus in the Computer Science Department. I assisted the Intro to Programming class (CSCI 1300) with installing a Virtual Box and Virtual Machine. Students used the Virtual Machine for Ubuntu OS. </p>
+						<p> In Fall 2014 my name made it onto the Deans list at CU boulder.</p>
 						<h2>Take a Tour</h2>
 						<ul>
 							<li><a class="active" href="index.html">Home</a></li>
-							<li><a href="examples.html">Examples</a></li>
+							<li><a href="examples.html">Projects</a></li>
 							<li><a href="apage.html">A Page</a></li>
 							<li><a href="anotherpage.html">Another Page</a></li>
 						</ul>						
@@ -147,7 +153,7 @@
 			<!-- Footer -->
 				<footer>
 					<p><a href="index.html">Home</a> | <a href="examples.html">Projects</a> | <a href="apage.html">A Page</a> | <a href="anotherpage.html">Another Page</a> | <a href="contact.php">Contact Us</a></p>
-					<p>Copyright &copy; CSS3_water | <a href="http://skeljs.org/">skel.js</a> | <a href="http://fotogrph.com/">Images</a> | <a href="http://www.css3templates.co.uk">design from css3templates.co.uk</a></p>
+					<p> <a href="http://www.css3templates.co.uk">design from css3templates.co.uk</a></p>
 				</footer>		
 		</div>		
 			
