Added experience tab

--- a/examples.html
+++ b/examples.html
@@ -72,6 +72,7 @@
 						<div class="wrapper">
 							<h1><a href="index.html">Brian A. <span class="header_colour">Alfano</span></a></h1>
 							<h2>Software Engineer - CU Boulder class of 2017</h2>
+							<h2>Minor in Business</h2>
 					    </div>
 					</div>
 					
@@ -79,7 +80,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a class="active" href="examples.html">Projects</a></li>
-							<li><a href="apage.html">A Page</a></li>
+							<li><a href="apage.html">Experience</a></li>
 							<li><a href="anotherpage.html">Another Page</a></li>
 							<li><a href="contact.php">Contact</a></li>
 						</ul>
@@ -108,9 +109,9 @@
 					<section class="4u">
 						<div id="sidebar">
 							<section class="12u">
-								<h3>Latest News</h3>
-								<h4>June 12th, 2015</h4>
-								<p>Creating a website for myself </p>
+								<h3><dfn>Contact Information</dfn></h3>
+								<!--<h4>June 12th, 2015</h4>-->
+								<p><a href="mailto:brian.a.alfano@gmail.com">brian.a.alfano@gmail.com</a></p>
 							</section>
 							<section class="12u">
 								<h3>Useful Links</h3>
@@ -132,7 +133,7 @@
 						<p><dfn> Problem:</dfn> You save links in your web browser and all the links look the same. With Stache you get a special thumbnail and a beautiful organization of media. Our interface will parse the video links, photo links, and any other link into the appropriate category.</p>
 						<p><i>Typical Safari bookmarks:</i> <span class="center"><img src="images/safari.png" alt ="example graphic" /></span> </p>
 						<p><i> Stache's beatiful bookmarking:</i> <span class="center"><img src="images/stache2.png" alt ="example graphic" /></span> <p>
-						<p><dfn> Solution:</dfn> My idea was to create a webpage for a user to post their favorite media (photos, videos, music, and websites). Stache is a better way to bookmark everything cool you find on the Internet.</p>
+						<p><dfn> Solution:</dfn> My idea was to create a webpage for a user to post their favorite media (photos, videos, music, and websites). Stache is a better way to bookmark everything you find on the Internet.</p>
 						<p><dfn> Implementation: </dfn> Thanks to a great team we created <a href = "http://stache.link" target =  "_blank">Stache.link</a>. We used Agile Management Software Development – this allows flexibility for the developers to react to the unpredictability of the project and focuses on shorter intervals in order to deliver the product accordingly. We used user story sizing to decide the risk, complexity, and effort of each story, which were moved from product backlog board to the active sprint.
 						An important part for our development was the use of pair programming, in order to write better code, increased productivity, quickly catch bugs, and have a focused direction of development. I mainly programmed in the text editor Sublime Text to work with HTML and CSS.
 						MySQL – this is an open source relational database management system that uses SQL to manipulate the contents within the database.
@@ -160,8 +161,8 @@
 			<div class="container">			
 			<!-- Footer -->
 				<footer>
-					<p><a href="index.html">Home</a> | <a href="examples.html">Examples</a> | <a href="apage.html">A Page</a> | <a href="anotherpage.html">Another Page</a> | <a href="contact.php">Contact Us</a></p>
-					<p><a href="http://www.css3templates.co.uk">design from css3templates.co.uk</a></p>
+					<p><a href="index.html">Home</a> | <a href="examples.html">Projects</a> | <a href="apage.html">Experience</a> | <a href="anotherpage.html">Another Page</a> | <a href="contact.php">Contact Us</a></p>
+					<p> <a href="http://www.css3templates.co.uk" target="_blank">design from css3templates.co.uk</a></p>
 				</footer>		
 			</div>
         </div>		
