--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 						<div class="wrapper">
 							<h1><a href="index.html">Brian A. <span class="header_colour">Alfano </span></a></h1>
 							<h2>Software Engineer - CU Boulder class of 2017</h2>
+							<h2>Minor in Business</h2>
 					    </div>
 					</div>
 					
@@ -79,7 +80,7 @@
 						<ul>
 							<li><a class="active" href="index.html">Home</a></li>
 							<li><a href="examples.html">Projects</a></li>
-							<li><a href="apage.html">A Page</a></li>
+							<li><a href="apage.html">Experience</a></li>
 							<li><a href="anotherpage.html">Another Page</a></li>				
 							<li><a href="contact.php">Contact</a></li>
 
@@ -110,9 +111,9 @@
 					<section class="4u">
 						<div id="sidebar">
 							<section class="12u">
-								<h3>Contact</h3>
-								<h4>June 12th, 2015</h4>
-								<p>Creating a website for myself </p>
+								<h3><dfn>Contact Information</dfn></h3>
+								<!--<h4>June 12th, 2015</h4>-->
+								<p><a href="mailto:brian.a.alfano@gmail.com">brian.a.alfano@gmail.com</a></p>
 							</section>
 							<section class="12u">
 								<h3>Useful Links</h3>
@@ -130,17 +131,17 @@
 						
 						<h1>Welcome to Brian Alfano's Website!</h1>
 						<p> Hopefully you came here to understand my background, passions, projects, schooling, work experience, and involvments I am apart of. </p>
-						<p> I grew up in Santa Monica, California and moved to Colorado after my acceptance at The University of Colorado. Since my sophomore year my focus in school consists of studying Computer Science and Business. </p>
-						<p> My passion lies in Software Engineering. I strive to practice debugging, software development, security, and testing. Strong software stems from these understandings and a goal of mine is to excel in all four fields. </p>
+						<p> I grew up in Santa Monica, California and moved to Colorado after my acceptance at The University of Colorado in 2012. Since my sophomore year my focus in school consists of studying <dfn>computer science</dfn> and <dfn>business</dfn>. </p>
+						<p> My passion lies in Software Engineering. I strive to practice OOD, software development, security, and testing. Strong software stems from these understandings and a goal of mine is to excel in all four fields. </p>
 						<p> A three month long Software Methods and Tools project was completed in Fall of 2014 by me and four other students. More information about <dfn>all</dfn> projects can be found <a href="examples.html">here</a>.</p>
-						<p> My focus at school is studing Software Engineering with a minor in Buisness at the Leeds School of Business. My business minor gave me knowledge about marketing, cooperative work environment, entreprenuership/business models, accounting, and finnances of a business.</p>
-						<p> In spring 2014 I took a job on the CU campus in the Computer Science Department. I assisted the Intro to Programming class (CSCI 1300) with installing a Virtual Box and Virtual Machine. Students used the Virtual Machine for Ubuntu OS. </p>
+						<p> My focus at school is studing Software Engineering with a minor in Buisness at the Leeds School of Business. My business minor gave me knowledge about marketing, cooperative work environment, entreprenuership, accounting, and finnances of a business.</p>
+						<p> In spring 2014 I took a job on the CU campus in the Computer Science Department. I assisted the Intro to Programming class (CSCI 1300) with installing Virtual Box and Virtual Machine. Students used the Virtual Machine for Ubuntu OS. </p>
 						<p> In Fall 2014 my name made it onto the Deans list at CU boulder.</p>
 						<h2>Take a Tour</h2>
 						<ul>
 							<li><a class="active" href="index.html">Home</a></li>
 							<li><a href="examples.html">Projects</a></li>
-							<li><a href="apage.html">A Page</a></li>
+							<li><a href="apage.html">Experience</a></li>
 							<li><a href="anotherpage.html">Another Page</a></li>
 						</ul>						
 					</section>					
@@ -152,8 +153,8 @@
 		<div class="container">					
 			<!-- Footer -->
 				<footer>
-					<p><a href="index.html">Home</a> | <a href="examples.html">Projects</a> | <a href="apage.html">A Page</a> | <a href="anotherpage.html">Another Page</a> | <a href="contact.php">Contact Us</a></p>
-					<p> <a href="http://www.css3templates.co.uk">design from css3templates.co.uk</a></p>
+					<p><a href="index.html">Home</a> | <a href="examples.html">Projects</a> | <a href="apage.html">Experience</a> | <a href="anotherpage.html">Another Page</a> | <a href="contact.php">Contact Us</a></p>
+					<p> <a href="http://www.css3templates.co.uk" target ="_blank">design from css3templates.co.uk</a></p>
 				</footer>		
 		</div>		
 			
